2011-07-10  Johan Bockgård  <bojohan@gnu.org>

	* xdisp.c (Ftool_bar_lines_needed): Fix WINDOWP check.

2011-07-10  Jan Djärv  <jan.h.d@swipnet.se>

	* xmenu.c (menu_highlight_callback): Only pass frame to show_help_event
	for non-popups (Bug#3642).

2011-07-10  Andreas Schwab  <schwab@linux-m68k.org>

	* alloc.c (reset_malloc_hooks): Protoize.
	* buffer.c (mmap_init, mmap_find, mmap_free_1, mmap_enlarge)
	(mmap_set_vars, mmap_alloc, mmap_free, mmap_realloc): Likewise.
	* cm.c (losecursor): Likewise.
	* data.c (fmod): Likewise.
	* dispnew.c (swap_glyphs_in_rows): Likewise.
	* emacs.c (memory_warning_signal): Likewise.
	* floatfns.c (float_error): Likewise.
	* font.c (check_gstring, check_otf_features, otf_tag_symbol)
	(otf_open, font_otf_capability, generate_otf_features)
	(font_otf_DeviceTable, font_otf_ValueRecord, font_otf_Anchor):
	Likewise.
	* image.c (pbm_read_file): Likewise.
	* indent.c (string_display_width): Likewise.
	* intervals.c (check_for_interval, search_for_interval)
	(inc_interval_count, count_intervals, root_interval)
	(adjust_intervals_for_insertion, make_new_interval): Likewise.
	* lread.c (defalias): Likewise.
	* ralloc.c (r_alloc_check): Likewise.
	* regex.c (set_image_of_range_1, set_image_of_range)
	(regex_grow_registers): Likewise.
	* sysdep.c (strerror): Likewise.
	* termcap.c (valid_filename_p, tprint, main): Likewise.
	* tparam.c (main): Likewise.
	* unexhp9k800.c (run_time_remap, save_data_space)
	(update_file_ptrs, read_header, write_header, calculate_checksum)
	(copy_file, copy_rest, display_header): Likewise.
	* widget.c (mark_shell_size_user_specified, create_frame_gcs):
	Likewise.
	* xdisp.c (check_it): Likewise.
	* xfaces.c (register_color, unregister_color, unregister_colors):
	Likewise.
	* xfns.c (print_fontset_result): Likewise.
	* xrdb.c (member, fatal, main): Likewise.

2011-07-10  Paul Eggert  <eggert@cs.ucla.edu>

	Fix minor problems found by static checking (Bug#9031).